Fixed bugs and improved readability of code